--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "serve-data-three",
   "version": "1.0.0",
-  "description": "",
+  "description": "hi",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  "author": "",
+  "author": "hi",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
